# basingamarket

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/admin/: Cargo.toml
apps/admin/src/: main.rs
apps/api/: Cargo.toml
apps/api/src/: busdc_mints.rs  chain_status.rs  crypto_projection.rs  deposit_repairs.rs  deposits.rs  devnet_round_bootstrap.rs  error.rs  health.rs  http_config.rs  lib.rs  main.rs  metrics.rs  privy_users.rs  profile_activity.rs  profile_tickets.rs  protocol_markets.rs  public_format.rs  round_settlement.rs  secondary_resale.rs  settlement_tests.rs  sol_deposit_price.rs  tests.rs  trade_intent.rs  transfer_deposits.rs  wallet_sessions.rs  websocket.rs  withdrawals.rs
apps/api/src/tests/: busdc_mints.rs  wallet_session_flow.rs
apps/api/tests/: crypto_projection.rs  solana_devnet_guard.rs
apps/indexer/: Cargo.toml
apps/indexer/src/: lib.rs  main.rs
apps/web/: .env.example  .npmrc  components.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/scripts/: bootstrap-devnet-round.mjs  bootstrap-devnet-round.test.mjs  cash-buy-devnet.mjs  deploy-devnet-program.mjs  dev-full-stack.mjs  dev-full-stack.test.mjs  devnet-live-round-keeper.mjs  devnet-live-round-keeper.test.mjs  patch-privy-key-warning.mjs  repair-sol-deposit.mjs  reserve-devnet-cash.mjs  reserve-devnet-cash.test.mjs  secondary-resale-devnet.mjs  set-devnet-cash-mint.mjs  set-devnet-cash-mint.test.mjs  setup-devnet-cash.mjs  setup-devnet-cash.test.mjs  withdraw-devnet-cash.mjs  withdraw-devnet-cash.test.mjs
apps/web/src/: app.css  app.html
apps/web/src/app/: AppShell.test.tsx  AppShell.tsx  layout.tsx  providers.tsx
apps/web/src/app/api/backend/: route.test.ts
apps/web/src/app/login/: page.tsx
apps/web/src/app/markets/: MarketsClientPage.tsx  page.tsx
apps/web/src/app/markets/[marketId]/: page.tsx
apps/web/src/app/profiles/[address]/: page.test.tsx  page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/app/styleguide/: page.tsx
apps/web/src/app/tickets/[ticketId]/: page.tsx
apps/web/src/lib/api/: cashBalanceQuery.test.ts  cashBalanceQuery.ts  client.test.ts  client.ts  env.test.ts  env.ts  livePriceStore.ts  livePrices.test.ts  livePrices.ts  mock.ts  realtime.test.ts  realtime.ts  types.test.ts  types.ts
apps/web/src/lib/auth/: privy.tsx  solanaLogin.test.ts  solanaLogin.ts  walletSession.test.tsx  walletSession.ts
apps/web/src/lib/components/busdc/: BusdcMintButton.test.tsx  BusdcMintButton.tsx
apps/web/src/lib/components/deposit/: DepositButton.test.ts  DepositButton.tsx  signature.test.ts  signature.ts  transferConfirmation.test.ts  transferConfirmation.ts
apps/web/src/lib/components/market/: AssetPriceChartPanel.test.tsx  AssetPriceChartPanel.tsx  BondingCurvePanel.test.tsx  BondingCurvePanel.tsx  CanvasA11yFallback.svelte  CanvasBackground.svelte  DensityLayer.svelte  FlowTrailLayer.svelte  LiveAssetPriceCanvas.test.tsx  LiveAssetPriceCanvas.tsx  LiveConnectionBadge.svelte  LiveConnectionBadge.tsx  LivePingDot.test.tsx  LivePingDot.tsx  MarketActionPanel.svelte  MarketActionPanel.test.tsx  MarketActionPanel.tsx  MarketActivityPanel.test.tsx  MarketActivityPanel.tsx  MarketCanvas.svelte  MarketCanvas.tsx  MarketOrderBook.test.tsx  MarketOrderBook.tsx  MarketPricePanel.tsx  MarketPulseStrip.svelte  MarketPulseStrip.tsx  MarketRadarCard.svelte  MarketRadarCard.test.tsx  MarketRadarCard.tsx  MarketStatusBar.svelte  MarketStatusBar.test.tsx  MarketStatusBar.tsx  MiniCanvas.svelte  MiniCanvas.tsx  OddsStrip.svelte  OddsStrip.tsx  OutcomeRegion.svelte  OutcomeRegionLayer.svelte  PositionTimeline.svelte  PositionTimeline.tsx  (+12 more)
apps/web/src/lib/components/ui/: Badge.svelte  Badge.tsx  Button.svelte  Button.tsx  Dialog.svelte  Dropdown.svelte  Input.svelte  Input.tsx  Sheet.svelte  Sheet.tsx  Skeleton.svelte  Skeleton.tsx  Table.svelte  Tabs.svelte  Toast.svelte  Toast.tsx  Tooltip.svelte  Tooltip.tsx
apps/web/src/lib/components/wallet/: ExternalWalletSelector.test.tsx  (+2 more)
apps/web/src/lib/hooks/: useBinanceTickerStream.test.ts  useBinanceTickerStream.ts
apps/web/src/lib/markets/: detailRouteState.test.ts  detailRouteState.ts  filter.test.ts  filter.ts  priceLead.test.ts  priceLead.ts  roundDataGuards.test.ts  roundDataGuards.ts  routes.test.ts  routes.ts  time.test.ts  time.ts
apps/web/src/lib/utils/: amount.test.ts  amount.ts  cash.test.ts  cash.ts  signals.test.ts  signals.ts  solana.test.ts  solana.ts
apps/web/src/lib/wallet/: ExternalWalletContext.test.tsx  ExternalWalletContext.tsx
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/markets/: +page.svelte
apps/web/src/routes/styleguide/: +page.svelte
apps/web/tests/e2e/: smoke.spec.ts
apps/worker/: Cargo.toml
apps/worker/src/: lib.rs  main.rs
config/: solana-devnet.example.toml
contracts/src/: BasingaMarket.sol
contracts/test/: BasingaMarketEvents.t.sol
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/chain/: Cargo.toml
crates/chain/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_init.sql
crates/db/src/: cash_snapshot.rs  engine.rs  lib.rs  markets.rs  memory.rs  memory_settlement.rs  pg.rs  rows.rs  tests.rs  withdrawals.rs
crates/db/src/memory/: profile_activity_reads.rs
crates/domain/: Cargo.toml
crates/domain/src/: crypto_rounds.rs  lib.rs
crates/domain/src/crypto_rounds/: automation.rs  settlement.rs  tests.rs  trading.rs  types.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: binance.rs  lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/protocol-events/: Cargo.toml
crates/protocol-events/src/: lib.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
docs/: frontend-design-spec.md
docs/runbooks/: incident-playbook.md  projection-rebuild.md
monitoring/: prometheus-rules.yml
programs/basingamarket/: Cargo.toml
programs/basingamarket/src/: contexts.rs  lib.rs  math.rs  ops.rs
(+12 files in other folders)
