[workspace]
members = [
    "apps/admin",
    "apps/api",
    "apps/indexer",
    "apps/worker",
    "crates/auth",
    "crates/chain",
    "crates/db",
    "crates/domain",
    "crates/observability",
    "crates/market-data",
    "crates/protocol-events",
    "crates/realtime",
    "crates/renderer",
    "programs/basingamarket",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
curve25519-dalek = "4"
dotenvy = "0.15"
ed25519-dalek = "2.2"
hex = "0.4"
http-body-util = "0.1"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
prometheus = "0.13"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "limit", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
