[package]
name = "basingamarket-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
basingamarket-auth = { path = "../../crates/auth" }
basingamarket-chain = { path = "../../crates/chain" }
basingamarket-db = { path = "../../crates/db" }
basingamarket-domain = { path = "../../crates/domain" }
basingamarket-observability = { path = "../../crates/observability" }
basingamarket-market-data = { path = "../../crates/market-data" }
basingamarket-realtime = { path = "../../crates/realtime" }
chrono.workspace = true
dotenvy.workspace = true
http-body-util.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
basingamarket-protocol-events = { path = "../../crates/protocol-events" }
ed25519-dalek.workspace = true
p256.workspace = true
