[package]
name = "basingamarket-worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
basingamarket-db = { path = "../../crates/db" }
basingamarket-observability = { path = "../../crates/observability" }
basingamarket-renderer = { path = "../../crates/renderer" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
basingamarket-protocol-events = { path = "../../crates/protocol-events" }
