[package]
name = "basingamarket-db"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
basingamarket-protocol-events = { path = "../protocol-events" }
basingamarket-domain = { path = "../domain" }
basingamarket-realtime = { path = "../realtime" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
