[package]
name = "basingamarket-market-data"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
basingamarket-domain = { path = "../domain" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
