[package]
name = "basingamarket-renderer"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["png"]
png = ["resvg", "tiny-skia", "usvg"]

[dependencies]
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
resvg = { version = "0.45", optional = true }
tiny-skia = { version = "0.11", optional = true }
usvg = { version = "0.45", optional = true }
